# kanabake

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  lines
src/: error.rs  kana.rs  lib.rs  main.rs  parser.rs  set.rs  sets.rs  tokens.rs  valid.rs  word.rs
src/sets/: mod.rs
src/tokens/: mod.rs
src/word/: mod.rs
tests/: error.rs  hiragana.rs  integration_test.rs  katakana.rs  performance.rs  valid.rs
