[package]
name = "kanabake"
version = "0.1.0"
authors = ["vkstrm"]
edition = "2018"
description = "Turn Romaji strings into Hiragana or Katakana"
keywords = ["japanese", "kana"]
repository = "https://github.com/vkstrm/kanabake"
readme = "README.md"
license = "MIT"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"